Fix: move scrollbars from right panel to whole page

--- a/src/app/css/energiatieto.css
+++ b/src/app/css/energiatieto.css
@@ -91,7 +91,22 @@ div.navbar {
 .navbar.header {
     margin-bottom: 0px;
 }
+
 /* panels */
+
+.panel.left {
+    float: left;
+    margin-top: 35px;
+    margin-bottom: 0px; /* 0 if there is no footer */
+    width: 560px;
+}
+
+.panel.right {
+    float: right;
+    margin-top: 75px;
+    margin-right: 15px;
+    width: 420px;
+}
 
 .chart-area {
     margin-left: 0px;
@@ -99,20 +114,6 @@ div.navbar {
 }
 .chart-area > * {
     padding-top: 50px;
-}
-.panel.left {
-    float: left;
-    margin-top: 35px;
-    margin-bottom: 0px; /* 0 if there is no footer */
-    width: 560px;
-}
-.panel.right {
-    position: absolute;
-    top: 75px;
-    right: 15px;
-    bottom: 0px; /* 0 if there is no footer */
-    width: 420px;
-    overflow: scroll;
 }
 
 .main {
@@ -430,4 +431,4 @@ form.search input[name=search] {
  .chart rect:hover {
     fill: rgb(225, 196, 45);
  }
- 
+
